# r-type

./: CMakeLists.txt  README  conanfile.txt
documentation/: protocol.txt
src/AI/: IMonster.hpp
src/client/: CMakeLists.txt  Main.cpp
src/client/conf/: Conf.hpp
src/client/graph/: IGraph.hpp  SFML.cpp  SFML.hpp  SFMLEntity.cpp  SFMLEntity.hpp  rtype.hpp
src/client/network/: Network.cpp  Network.hpp
src/client/scenes/: IScene.hpp
src/client/scenes/game/: Game.cpp  Game.hpp
src/client/scenes/menu/: Menu.cpp  Menu.hpp
src/server/: CMakeLists.txt  Main.cpp
src/server/game/: Game.cpp  Game.hpp
src/server/gameEngine/engine/: Engine.cpp  Engine.hpp
src/server/gameEngine/entity/: Entity.cpp  Entity.hpp
src/server/gameEngine/network/: Server.cpp  Server.hpp
src/server/testGame/: TestGame.cpp  TestGame.hpp  main.cpp
src/shared/: Protocol.cpp  Protocol.hpp
